[gd_scene load_steps=8 format=4 uid="uid://drshrny2s7ho3"]

[ext_resource type="Script" uid="uid://duxreaatw4nry" path="res://game.gd" id="1_80nbo"]
[ext_resource type="PackedScene" uid="uid://b54gost1m7fjw" path="res://hurt_brick.tscn" id="2_e2o6t"]
[ext_resource type="Texture2D" uid="uid://b2xbr0vtri0a3" path="res://tileset.png" id="2_feb5d"]

[sub_resource type="LabelSettings" id="LabelSettings_feb5d"]
font_size = 32
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_80nbo"]
font_size = 32
font_color = Color(1, 1, 0, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fc0e3"]
texture = ExtResource("2_feb5d")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_7jktm"]
physics_layer_0/collision_layer = 1
sources/4 = SubResource("TileSetAtlasSource_fc0e3")

[node name="Game" type="Node2D"]
script = ExtResource("1_80nbo")

[node name="err" type="Label" parent="."]
offset_left = 780.0
offset_top = 150.0
offset_right = 960.0
offset_bottom = 210.0
label_settings = SubResource("LabelSettings_feb5d")

[node name="UI" type="CanvasLayer" parent="."]
visible = false

[node name="ishost" type="Label" parent="UI"]
visible = false
offset_right = 120.0
offset_bottom = 60.0
label_settings = SubResource("LabelSettings_80nbo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Multiplayer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="UI/Multiplayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -15.0
offset_right = 22.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="UI/Multiplayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 36.0
offset_right = 24.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
text = "Join"

[node name="IPEntry" type="LineEdit" parent="UI/Multiplayer"]
layout_mode = 0
offset_left = 450.0
offset_top = 420.0
offset_right = 690.0
offset_bottom = 451.0

[node name="NameEntry" type="LineEdit" parent="UI/Multiplayer"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 450.0
offset_top = 480.0
offset_right = 690.0
offset_bottom = 511.0

[node name="enter ip" type="Label" parent="UI/Multiplayer"]
layout_mode = 0
offset_left = 720.0
offset_top = 420.0
offset_right = 870.0
offset_bottom = 450.0
text = "Enter ip address"

[node name="enter name" type="Label" parent="UI/Multiplayer"]
layout_mode = 0
offset_left = 720.0
offset_top = 480.0
offset_right = 870.0
offset_bottom = 510.0
text = "Enter your name"

[node name="Broadcasts" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Broadcasts"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Broadcasts/Control"]
layout_mode = 0
offset_right = 450.0
offset_bottom = 630.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="MsgContainer" type="VBoxContainer" parent="Broadcasts/Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 2

[node name="TilemapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAUACEABAAAAAAAAAAUACIABAAAAAAAAAAVACEABAAAAAAAAAAVACIABAAAAAAAAAAWACEABAAAAAAAAAAWACIABAAAAAAAAAAXACEABAAAAAAAAAAXACIABAAAAAAAAAAYACEABAAAAAAAAAAYACIABAAAAAAAAAAZACEABAAAAAAAAAAZACIABAAAAAAAAAAaACEABAAAAAAAAAAaACIABAAAAAAAAAAbACEABAAAAAAAAAAbACIABAAAAAAAAAAcACEABAAAAAAAAAAcACIABAAAAAAAAAAdACEABAAAAAAAAAAdACIABAAAAAAAAAAeACEABAAAAAAAAAAeACIABAAAAAAAAAAfACEABAAAAAAAAAAfACIABAAAAAAAAAAkABoABAAAAAAAAAAkABsABAAAAAAAAAAlABoABAAAAAAAAAAlABsABAAAAAAAAAAmABoABAAAAAAAAAAmABsABAAAAAAAAAAnABoABAAAAAAAAAAnABsABAAAAAAAAAAoABoABAAAAAAAAAAoABsABAAAAAAAAAApABoABAAAAAAAAAApABsABAAAAAAAAAAqABoABAAAAAAAAAAqABsABAAAAAAAAAArABoABAAAAAAAAAArABsABAAAAAAAAAAsABoABAAAAAAAAAAsABsABAAAAAAAAAAtABoABAAAAAAAAAAtABsABAAAAAAAAAAuABoABAAAAAAAAAAuABsABAAAAAAAAAAvABoABAAAAAAAAAAvABsABAAAAAAAAAAwABoABAAAAAAAAAAwABsABAAAAAAAAAD7/xwABAAAAAAAAAD7/x0ABAAAAAAAAAD7/x4ABAAAAAAAAAD8/xwABAAAAAAAAAD8/x0ABAAAAAAAAAD8/x4ABAAAAAAAAAD9/xwABAAAAAAAAAD9/x0ABAAAAAAAAAD9/x4ABAAAAAAAAAD+/xwABAAAAAAAAAD+/x0ABAAAAAAAAAD+/x4ABAAAAAAAAAD//xwABAAAAAAAAAD//x0ABAAAAAAAAAD//x4ABAAAAAAAAAAAABwABAAAAAAAAAAAAB0ABAAAAAAAAAAAAB4ABAAAAAAAAAABABwABAAAAAAAAAABAB0ABAAAAAAAAAABAB4ABAAAAAAAAAACABwABAAAAAAAAAACAB0ABAAAAAAAAAACAB4ABAAAAAAAAAADABwABAAAAAAAAAADAB0ABAAAAAAAAAADAB4ABAAAAAAAAAAEABwABAAAAAAAAAAEAB0ABAAAAAAAAAAEAB4ABAAAAAAAAAAFABwABAAAAAAAAAAFAB0ABAAAAAAAAAAFAB4ABAAAAAAAAAAGABwABAAAAAAAAAAGAB0ABAAAAAAAAAAGAB4ABAAAAAAAAAAHABwABAAAAAAAAAAHAB0ABAAAAAAAAAAHAB4ABAAAAAAAAAAIABwABAAAAAAAAAAIAB0ABAAAAAAAAAAIAB4ABAAAAAAAAAAJABwABAAAAAAAAAAJAB0ABAAAAAAAAAAJAB4ABAAAAAAAAAAKABwABAAAAAAAAAAKAB0ABAAAAAAAAAAKAB4ABAAAAAAAAAALABwABAAAAAAAAAALAB0ABAAAAAAAAAALAB4ABAAAAAAAAAD0/xQABAAAAAAAAAD0/xUABAAAAAAAAAD0/xYABAAAAAAAAAD0/xcABAAAAAAAAAD1/xQABAAAAAAAAAD1/xUABAAAAAAAAAD1/xYABAAAAAAAAAD1/xcABAAAAAAAAAD2/xQABAAAAAAAAAD2/xUABAAAAAAAAAD2/xYABAAAAAAAAAD2/xcABAAAAAAAAAD3/xQABAAAAAAAAAD3/xUABAAAAAAAAAD3/xYABAAAAAAAAAD3/xcABAAAAAAAAADs/w8ABAAAAAAAAADs/xAABAAAAAAAAADs/xEABAAAAAAAAADs/xIABAAAAAAAAADt/w8ABAAAAAAAAADt/xAABAAAAAAAAADt/xEABAAAAAAAAADt/xIABAAAAAAAAADu/w8ABAAAAAAAAADu/xAABAAAAAAAAADu/xEABAAAAAAAAADu/xIABAAAAAAAAADv/w8ABAAAAAAAAADv/xAABAAAAAAAAADv/xEABAAAAAAAAADv/xIABAAAAAAAAAD2/wcABAAAAAAAAAD2/wgABAAAAAAAAAD2/wkABAAAAAAAAAD2/woABAAAAAAAAAD3/wcABAAAAAAAAAD3/wgABAAAAAAAAAD3/wkABAAAAAAAAAD3/woABAAAAAAAAAD4/wcABAAAAAAAAAD4/wgABAAAAAAAAAD4/wkABAAAAAAAAAD4/woABAAAAAAAAAD5/wcABAAAAAAAAAD5/wgABAAAAAAAAAD5/wkABAAAAAAAAAD5/woABAAAAAAAAAD6/wcABAAAAAAAAAD6/wgABAAAAAAAAAD6/wkABAAAAAAAAAD6/woABAAAAAAAAAD7/wcABAAAAAAAAAD7/wgABAAAAAAAAAD7/wkABAAAAAAAAAD7/woABAAAAAAAAAD8/wcABAAAAAAAAAD8/wgABAAAAAAAAAD8/wkABAAAAAAAAAD8/woABAAAAAAAAAD9/wcABAAAAAAAAAD9/wgABAAAAAAAAAD9/wkABAAAAAAAAAD9/woABAAAAAAAAAD+/wcABAAAAAAAAAD+/wgABAAAAAAAAAD+/wkABAAAAAAAAAD+/woABAAAAAAAAAD//wcABAAAAAAAAAD//wgABAAAAAAAAAD//wkABAAAAAAAAAD//woABAAAAAAAAAAAAAcABAAAAAAAAAAAAAgABAAAAAAAAAAAAAkABAAAAAAAAAAAAAoABAAAAAAAAAABAAcABAAAAAAAAAABAAgABAAAAAAAAAABAAkABAAAAAAAAAABAAoABAAAAAAAAAACAAcABAAAAAAAAAACAAgABAAAAAAAAAACAAkABAAAAAAAAAACAAoABAAAAAAAAAA7ACAABAAAAAAAAAA7ACEABAAAAAAAAAA8ACAABAAAAAAAAAA8ACEABAAAAAAAAAA9ACAABAAAAAAAAAA9ACEABAAAAAAAAAA+ACAABAAAAAAAAAA+ACEABAAAAAAAAAA/ACAABAAAAAAAAAA/ACEABAAAAAAAAABAACAABAAAAAAAAABAACEABAAAAAAAAABBACAABAAAAAAAAABBACEABAAAAAAAAABCACAABAAAAAAAAABCACEABAAAAAAAAABDACAABAAAAAAAAABDACEABAAAAAAAAABEACAABAAAAAAAAABEACEABAAAAAAAAABFACAABAAAAAAAAABFACEABAAAAAAAAABGACAABAAAAAAAAABGACEABAAAAAAAAABHACAABAAAAAAAAABHACEABAAAAAAAAABIACAABAAAAAAAAABIACEABAAAAAAAAABMABkABAAAAAAAAABMABoABAAAAAAAAABMABsABAAAAAAAAABMABwABAAAAAAAAABNABkABAAAAAAAAABNABoABAAAAAAAAABNABsABAAAAAAAAABNABwABAAAAAAAAABOABkABAAAAAAAAABOABoABAAAAAAAAABOABsABAAAAAAAAABOABwABAAAAAAAAABPABkABAAAAAAAAABPABoABAAAAAAAAABPABsABAAAAAAAAABPABwABAAAAAAAAABMABAABAAAAAAAAABMABEABAAAAAAAAABMABIABAAAAAAAAABMABMABAAAAAAAAABNABAABAAAAAAAAABNABEABAAAAAAAAABNABIABAAAAAAAAABNABMABAAAAAAAAABOABAABAAAAAAAAABOABEABAAAAAAAAABOABIABAAAAAAAAABOABMABAAAAAAAAABPABAABAAAAAAAAABPABEABAAAAAAAAABPABIABAAAAAAAAABPABMABAAAAAAAAABMAAcABAAAAAAAAABMAAgABAAAAAAAAABMAAkABAAAAAAAAABMAAoABAAAAAAAAABNAAcABAAAAAAAAABNAAgABAAAAAAAAABNAAkABAAAAAAAAABNAAoABAAAAAAAAABOAAcABAAAAAAAAABOAAgABAAAAAAAAABOAAkABAAAAAAAAABOAAoABAAAAAAAAABPAAcABAAAAAAAAABPAAgABAAAAAAAAABPAAkABAAAAAAAAABPAAoABAAAAAAAAAAzAAMABAAAAAAAAAAzAAQABAAAAAAAAAA0AAMABAAAAAAAAAA0AAQABAAAAAAAAAA1AAMABAAAAAAAAAA1AAQABAAAAAAAAAA2AAMABAAAAAAAAAA2AAQABAAAAAAAAAA3AAMABAAAAAAAAAA3AAQABAAAAAAAAAA4AAMABAAAAAAAAAA4AAQABAAAAAAAAAA5AAMABAAAAAAAAAA5AAQABAAAAAAAAAA6AAMABAAAAAAAAAA6AAQABAAAAAAAAAA7AAMABAAAAAAAAAA7AAQABAAAAAAAAAA8AAMABAAAAAAAAAA8AAQABAAAAAAAAAA9AAMABAAAAAAAAAA9AAQABAAAAAAAAAA+AAMABAAAAAAAAAA+AAQABAAAAAAAAAA/AAMABAAAAAAAAAA/AAQABAAAAAAAAABAAAMABAAAAAAAAABAAAQABAAAAAAAAABBAAMABAAAAAAAAABBAAQABAAAAAAAAABCAAMABAAAAAAAAABCAAQABAAAAAAAAABDAAMABAAAAAAAAABDAAQABAAAAAAAAABEAAMABAAAAAAAAABEAAQABAAAAAAAAABFAAMABAAAAAAAAABFAAQABAAAAAAAAABGAAMABAAAAAAAAABGAAQABAAAAAAAAABHAAMABAAAAAAAAABHAAQABAAAAAAAAABIAAMABAAAAAAAAABIAAQABAAAAAAAAAAZAAMABAAAAAAAAAAZAAQABAAAAAAAAAAaAAMABAAAAAAAAAAaAAQABAAAAAAAAAAbAAMABAAAAAAAAAAbAAQABAAAAAAAAAAcAAMABAAAAAAAAAAcAAQABAAAAAAAAAAdAAMABAAAAAAAAAAdAAQABAAAAAAAAAAeAAMABAAAAAAAAAAeAAQABAAAAAAAAAAfAAMABAAAAAAAAAAfAAQABAAAAAAAAAAgAAMABAAAAAAAAAAgAAQABAAAAAAAAAAhAAMABAAAAAAAAAAhAAQABAAAAAAAAAAiAAMABAAAAAAAAAAiAAQABAAAAAAAAAAjAAMABAAAAAAAAAAjAAQABAAAAAAAAAAkAAMABAAAAAAAAAAkAAQABAAAAAAAAAAlAAMABAAAAAAAAAAlAAQABAAAAAAAAAAmAAMABAAAAAAAAAAmAAQABAAAAAAAAAAnAAMABAAAAAAAAAAnAAQABAAAAAAAAAAoAAMABAAAAAAAAAAoAAQABAAAAAAAAAApAAMABAAAAAAAAAApAAQABAAAAAAAAAAqAAMABAAAAAAAAAAqAAQABAAAAAAAAAArAAMABAAAAAAAAAArAAQABAAAAAAAAAAsAAMABAAAAAAAAAAsAAQABAAAAAAAAAADAP//BAAAAAAAAAADAAAABAAAAAAAAAAEAP//BAAAAAAAAAAEAAAABAAAAAAAAAAFAP//BAAAAAAAAAAFAAAABAAAAAAAAAAGAP//BAAAAAAAAAAGAAAABAAAAAAAAAAHAP//BAAAAAAAAAAHAAAABAAAAAAAAAAIAP//BAAAAAAAAAAIAAAABAAAAAAAAAAJAP//BAAAAAAAAAAJAAAABAAAAAAAAAAKAP//BAAAAAAAAAAKAAAABAAAAAAAAAALAP//BAAAAAAAAAALAAAABAAAAAAAAAAMAP//BAAAAAAAAAAMAAAABAAAAAAAAAANAP//BAAAAAAAAAANAAAABAAAAAAAAAAOAP//BAAAAAAAAAAOAAAABAAAAAAAAAAPAP//BAAAAAAAAAAPAAAABAAAAAAAAAAQAP//BAAAAAAAAAAQAAAABAAAAAAAAAARAP//BAAAAAAAAAARAAAABAAAAAAAAAASAP//BAAAAAAAAAASAAAABAAAAAAAAAATAP//BAAAAAAAAAATAAAABAAAAAAAAAAUAP//BAAAAAAAAAAUAAAABAAAAAAAAAAVAP//BAAAAAAAAAAVAAAABAAAAAAAAADt/ygABAAAAAAAAADt/ykABAAAAAAAAADu/ygABAAAAAAAAADu/ykABAAAAAAAAADv/ygABAAAAAAAAADv/ykABAAAAAAAAADw/ygABAAAAAAAAADw/ykABAAAAAAAAADx/ygABAAAAAAAAADx/ykABAAAAAAAAADy/ygABAAAAAAAAADy/ykABAAAAAAAAADz/ygABAAAAAAAAADz/ykABAAAAAAAAAD0/ygABAAAAAAAAAD0/ykABAAAAAAAAAD1/ygABAAAAAAAAAD1/ykABAAAAAAAAAD2/ygABAAAAAAAAAD2/ykABAAAAAAAAAD3/ygABAAAAAAAAAD3/ykABAAAAAAAAAD4/ygABAAAAAAAAAD4/ykABAAAAAAAAAD5/ygABAAAAAAAAAD5/ykABAAAAAAAAAD6/ygABAAAAAAAAAD6/ykABAAAAAAAAAD7/ygABAAAAAAAAAD7/ykABAAAAAAAAAD8/ygABAAAAAAAAAD8/ykABAAAAAAAAAD9/ygABAAAAAAAAAD9/ykABAAAAAAAAAD+/ygABAAAAAAAAAD+/ykABAAAAAAAAAD//ygABAAAAAAAAAD//ykABAAAAAAAAAAAACgABAAAAAAAAAAAACkABAAAAAAAAAABACgABAAAAAAAAAABACkABAAAAAAAAAACACgABAAAAAAAAAACACkABAAAAAAAAAADACgABAAAAAAAAAADACkABAAAAAAAAAAEACgABAAAAAAAAAAEACkABAAAAAAAAAAFACgABAAAAAAAAAAFACkABAAAAAAAAAAGACgABAAAAAAAAAAGACkABAAAAAAAAAAHACgABAAAAAAAAAAHACkABAAAAAAAAAAIACgABAAAAAAAAAAIACkABAAAAAAAAAAJACgABAAAAAAAAAAJACkABAAAAAAAAAAKACgABAAAAAAAAAAKACkABAAAAAAAAAALACgABAAAAAAAAAALACkABAAAAAAAAAAMACgABAAAAAAAAAAMACkABAAAAAAAAAANACgABAAAAAAAAAANACkABAAAAAAAAAAOACgABAAAAAAAAAAOACkABAAAAAAAAAAPACgABAAAAAAAAAAPACkABAAAAAAAAAAQACgABAAAAAAAAAAQACkABAAAAAAAAAARACgABAAAAAAAAAARACkABAAAAAAAAAASACgABAAAAAAAAAASACkABAAAAAAAAAATACgABAAAAAAAAAATACkABAAAAAAAAAAUACgABAAAAAAAAAAUACkABAAAAAAAAAAVACgABAAAAAAAAAAVACkABAAAAAAAAAAWACgABAAAAAAAAAAWACkABAAAAAAAAAAXACgABAAAAAAAAAAXACkABAAAAAAAAAAYACgABAAAAAAAAAAYACkABAAAAAAAAAAZACgABAAAAAAAAAAZACkABAAAAAAAAAAaACgABAAAAAAAAAAaACkABAAAAAAAAAAbACgABAAAAAAAAAAbACkABAAAAAAAAAAcACgABAAAAAAAAAAcACkABAAAAAAAAAAdACgABAAAAAAAAAAdACkABAAAAAAAAAAeACgABAAAAAAAAAAeACkABAAAAAAAAAAfACgABAAAAAAAAAAfACkABAAAAAAAAAAgACgABAAAAAAAAAAgACkABAAAAAAAAAAhACgABAAAAAAAAAAhACkABAAAAAAAAAAiACgABAAAAAAAAAAiACkABAAAAAAAAAAjACgABAAAAAAAAAAjACkABAAAAAAAAAAkACgABAAAAAAAAAAkACkABAAAAAAAAAAlACgABAAAAAAAAAAlACkABAAAAAAAAAAmACgABAAAAAAAAAAmACkABAAAAAAAAAAnACgABAAAAAAAAAAnACkABAAAAAAAAAAoACgABAAAAAAAAAAoACkABAAAAAAAAAApACgABAAAAAAAAAApACkABAAAAAAAAAAqACgABAAAAAAAAAAqACkABAAAAAAAAAArACgABAAAAAAAAAArACkABAAAAAAAAAAsACgABAAAAAAAAAAsACkABAAAAAAAAAAtACgABAAAAAAAAAAtACkABAAAAAAAAAAuACgABAAAAAAAAAAuACkABAAAAAAAAAAvACgABAAAAAAAAAAvACkABAAAAAAAAAAwACgABAAAAAAAAAAwACkABAAAAAAAAAAxACgABAAAAAAAAAAxACkABAAAAAAAAAAyACgABAAAAAAAAAAyACkABAAAAAAAAAAzACgABAAAAAAAAAAzACkABAAAAAAAAAA0ACgABAAAAAAAAAA0ACkABAAAAAAAAAA1ACgABAAAAAAAAAA1ACkABAAAAAAAAAA2ACgABAAAAAAAAAA2ACkABAAAAAAAAAA3ACgABAAAAAAAAAA3ACkABAAAAAAAAAA4ACgABAAAAAAAAAA4ACkABAAAAAAAAAA5ACgABAAAAAAAAAA5ACkABAAAAAAAAAA6ACgABAAAAAAAAAA6ACkABAAAAAAAAAA7ACgABAAAAAAAAAA7ACkABAAAAAAAAAA8ACgABAAAAAAAAAA8ACkABAAAAAAAAAA9ACgABAAAAAAAAAA9ACkABAAAAAAAAAA+ACgABAAAAAAAAAA+ACkABAAAAAAAAAA/ACgABAAAAAAAAAA/ACkABAAAAAAAAABAACgABAAAAAAAAABAACkABAAAAAAAAABBACgABAAAAAAAAABBACkABAAAAAAAAABCACgABAAAAAAAAABCACkABAAAAAAAAABDACgABAAAAAAAAABDACkABAAAAAAAAABEACgABAAAAAAAAABEACkABAAAAAAAAABFACgABAAAAAAAAABFACkABAAAAAAAAABGACgABAAAAAAAAABGACkABAAAAAAAAABHACgABAAAAAAAAABHACkABAAAAAAAAABIACgABAAAAAAAAABIACkABAAAAAAAAABJACgABAAAAAAAAABJACkABAAAAAAAAABKACgABAAAAAAAAABKACkABAAAAAAAAABLACgABAAAAAAAAABLACkABAAAAAAAAABMACgABAAAAAAAAABMACkABAAAAAAAAABNACgABAAAAAAAAABNACkABAAAAAAAAABOACgABAAAAAAAAABOACkABAAAAAAAAABPACgABAAAAAAAAABPACkABAAAAAAAAABQACgABAAAAAAAAABQACkABAAAAAAAAABRACgABAAAAAAAAABRACkABAAAAAAAAAA1ACUABAAAAAAAAADb/ygABAAAAAAAAADb/ykABAAAAAAAAADc/ygABAAAAAAAAADc/ykABAAAAAAAAADd/ygABAAAAAAAAADd/ykABAAAAAAAAADe/ygABAAAAAAAAADe/ykABAAAAAAAAADf/ygABAAAAAAAAADf/ykABAAAAAAAAADg/ygABAAAAAAAAADg/ykABAAAAAAAAADh/ygABAAAAAAAAADh/ykABAAAAAAAAADi/ygABAAAAAAAAADi/ykABAAAAAAAAADj/ygABAAAAAAAAADj/ykABAAAAAAAAADk/ygABAAAAAAAAADk/ykABAAAAAAAAADl/ygABAAAAAAAAADl/ykABAAAAAAAAADm/ygABAAAAAAAAADm/ykABAAAAAAAAADn/ygABAAAAAAAAADn/ykABAAAAAAAAADo/ygABAAAAAAAAADo/ykABAAAAAAAAADp/ygABAAAAAAAAADp/ykABAAAAAAAAADq/ygABAAAAAAAAADq/ykABAAAAAAAAADr/ygABAAAAAAAAADr/ykABAAAAAAAAADs/ygABAAAAAAAAADs/ykABAAAAAAAAADb/wwABAAAAAAAAADb/w0ABAAAAAAAAADb/w4ABAAAAAAAAADb/w8ABAAAAAAAAADb/xAABAAAAAAAAADb/xEABAAAAAAAAADb/xIABAAAAAAAAADb/xMABAAAAAAAAADb/xQABAAAAAAAAADb/xUABAAAAAAAAADb/xYABAAAAAAAAADb/xcABAAAAAAAAADb/xgABAAAAAAAAADb/xkABAAAAAAAAADb/xoABAAAAAAAAADb/xsABAAAAAAAAADb/xwABAAAAAAAAADb/x0ABAAAAAAAAADb/x4ABAAAAAAAAADb/x8ABAAAAAAAAADb/yAABAAAAAAAAADb/yEABAAAAAAAAADb/yIABAAAAAAAAADb/yMABAAAAAAAAADb/yQABAAAAAAAAADb/yUABAAAAAAAAADb/yYABAAAAAAAAADb/ycABAAAAAAAAADc/wwABAAAAAAAAADc/w0ABAAAAAAAAADc/w4ABAAAAAAAAADc/w8ABAAAAAAAAADc/xAABAAAAAAAAADc/xEABAAAAAAAAADc/xIABAAAAAAAAADc/xMABAAAAAAAAADc/xQABAAAAAAAAADc/xUABAAAAAAAAADc/xYABAAAAAAAAADc/xcABAAAAAAAAADc/xgABAAAAAAAAADc/xkABAAAAAAAAADc/xoABAAAAAAAAADc/xsABAAAAAAAAADc/xwABAAAAAAAAADc/x0ABAAAAAAAAADc/x4ABAAAAAAAAADc/x8ABAAAAAAAAADc/yAABAAAAAAAAADc/yEABAAAAAAAAADc/yIABAAAAAAAAADc/yMABAAAAAAAAADc/yQABAAAAAAAAADc/yUABAAAAAAAAADc/yYABAAAAAAAAADc/ycABAAAAAAAAADb//D/BAAAAAAAAADb//H/BAAAAAAAAADb//L/BAAAAAAAAADb//P/BAAAAAAAAADb//T/BAAAAAAAAADb//X/BAAAAAAAAADb//b/BAAAAAAAAADb//f/BAAAAAAAAADb//j/BAAAAAAAAADb//n/BAAAAAAAAADb//r/BAAAAAAAAADb//v/BAAAAAAAAADb//z/BAAAAAAAAADb//3/BAAAAAAAAADb//7/BAAAAAAAAADb////BAAAAAAAAADb/wAABAAAAAAAAADb/wEABAAAAAAAAADb/wIABAAAAAAAAADb/wMABAAAAAAAAADb/wQABAAAAAAAAADb/wUABAAAAAAAAADb/wYABAAAAAAAAADb/wcABAAAAAAAAADb/wgABAAAAAAAAADb/wkABAAAAAAAAADb/woABAAAAAAAAADb/wsABAAAAAAAAADc//D/BAAAAAAAAADc//H/BAAAAAAAAADc//L/BAAAAAAAAADc//P/BAAAAAAAAADc//T/BAAAAAAAAADc//X/BAAAAAAAAADc//b/BAAAAAAAAADc//f/BAAAAAAAAADc//j/BAAAAAAAAADc//n/BAAAAAAAAADc//r/BAAAAAAAAADc//v/BAAAAAAAAADc//z/BAAAAAAAAADc//3/BAAAAAAAAADc//7/BAAAAAAAAADc////BAAAAAAAAADc/wAABAAAAAAAAADc/wEABAAAAAAAAADc/wIABAAAAAAAAADc/wMABAAAAAAAAADc/wQABAAAAAAAAADc/wUABAAAAAAAAADc/wYABAAAAAAAAADc/wcABAAAAAAAAADc/wgABAAAAAAAAADc/wkABAAAAAAAAADc/woABAAAAAAAAADc/wsABAAAAAAAAABSACgABAAAAAAAAABSACkABAAAAAAAAABTACgABAAAAAAAAABTACkABAAAAAAAAABUACgABAAAAAAAAABUACkABAAAAAAAAABVACgABAAAAAAAAABVACkABAAAAAAAAABWACgABAAAAAAAAABWACkABAAAAAAAAABXACgABAAAAAAAAABXACkABAAAAAAAAABYACgABAAAAAAAAABYACkABAAAAAAAAABZACgABAAAAAAAAABZACkABAAAAAAAAABaACgABAAAAAAAAABaACkABAAAAAAAAABbACgABAAAAAAAAABbACkABAAAAAAAAABcACgABAAAAAAAAABcACkABAAAAAAAAABdACgABAAAAAAAAABdACkABAAAAAAAAABeACgABAAAAAAAAABeACkABAAAAAAAAABfACgABAAAAAAAAABfACkABAAAAAAAAABgACgABAAAAAAAAABgACkABAAAAAAAAABhACgABAAAAAAAAABhACkABAAAAAAAAABiACgABAAAAAAAAABiACkABAAAAAAAAABhAO3/BAAAAAAAAABhAO7/BAAAAAAAAABhAO//BAAAAAAAAABhAPD/BAAAAAAAAABhAPH/BAAAAAAAAABhAPL/BAAAAAAAAABhAPP/BAAAAAAAAABhAPT/BAAAAAAAAABhAPX/BAAAAAAAAABhAPb/BAAAAAAAAABhAPf/BAAAAAAAAABhAPj/BAAAAAAAAABhAPn/BAAAAAAAAABhAPr/BAAAAAAAAABhAPv/BAAAAAAAAABhAPz/BAAAAAAAAABhAP3/BAAAAAAAAABhAP7/BAAAAAAAAABhAP//BAAAAAAAAABhAAAABAAAAAAAAABhAAEABAAAAAAAAABhAAIABAAAAAAAAABhAAMABAAAAAAAAABhAAQABAAAAAAAAABhAAUABAAAAAAAAABhAAYABAAAAAAAAABhAAcABAAAAAAAAABhAAgABAAAAAAAAABhAAkABAAAAAAAAABhAAoABAAAAAAAAABhAAsABAAAAAAAAABhAAwABAAAAAAAAABhAA0ABAAAAAAAAABhAA4ABAAAAAAAAABhAA8ABAAAAAAAAABhABAABAAAAAAAAABhABEABAAAAAAAAABhABIABAAAAAAAAABhABMABAAAAAAAAABhABQABAAAAAAAAABhABUABAAAAAAAAABhABYABAAAAAAAAABhABcABAAAAAAAAABhABgABAAAAAAAAABhABkABAAAAAAAAABhABoABAAAAAAAAABhABsABAAAAAAAAABhABwABAAAAAAAAABhAB0ABAAAAAAAAABhAB4ABAAAAAAAAABhAB8ABAAAAAAAAABhACAABAAAAAAAAABhACEABAAAAAAAAABhACIABAAAAAAAAABhACMABAAAAAAAAABhACQABAAAAAAAAABhACUABAAAAAAAAABhACYABAAAAAAAAABhACcABAAAAAAAAABiAO3/BAAAAAAAAABiAO7/BAAAAAAAAABiAO//BAAAAAAAAABiAPD/BAAAAAAAAABiAPH/BAAAAAAAAABiAPL/BAAAAAAAAABiAPP/BAAAAAAAAABiAPT/BAAAAAAAAABiAPX/BAAAAAAAAABiAPb/BAAAAAAAAABiAPf/BAAAAAAAAABiAPj/BAAAAAAAAABiAPn/BAAAAAAAAABiAPr/BAAAAAAAAABiAPv/BAAAAAAAAABiAPz/BAAAAAAAAABiAP3/BAAAAAAAAABiAP7/BAAAAAAAAABiAP//BAAAAAAAAABiAAAABAAAAAAAAABiAAEABAAAAAAAAABiAAIABAAAAAAAAABiAAMABAAAAAAAAABiAAQABAAAAAAAAABiAAUABAAAAAAAAABiAAYABAAAAAAAAABiAAcABAAAAAAAAABiAAgABAAAAAAAAABiAAkABAAAAAAAAABiAAoABAAAAAAAAABiAAsABAAAAAAAAABiAAwABAAAAAAAAABiAA0ABAAAAAAAAABiAA4ABAAAAAAAAABiAA8ABAAAAAAAAABiABAABAAAAAAAAABiABEABAAAAAAAAABiABIABAAAAAAAAABiABMABAAAAAAAAABiABQABAAAAAAAAABiABUABAAAAAAAAABiABYABAAAAAAAAABiABcABAAAAAAAAABiABgABAAAAAAAAABiABkABAAAAAAAAABiABoABAAAAAAAAABiABsABAAAAAAAAABiABwABAAAAAAAAABiAB0ABAAAAAAAAABiAB4ABAAAAAAAAABiAB8ABAAAAAAAAABiACAABAAAAAAAAABiACEABAAAAAAAAABiACIABAAAAAAAAABiACMABAAAAAAAAABiACQABAAAAAAAAABiACUABAAAAAAAAABiACYABAAAAAAAAABiACcABAAAAAAAAADb/+3/BAAAAAAAAADb/+7/BAAAAAAAAADb/+//BAAAAAAAAADc/+3/BAAAAAAAAADc/+7/BAAAAAAAAADc/+//BAAAAAAAAAA=")
tile_set = SubResource("TileSet_7jktm")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="Spawnpoints" type="Node2D" parent="."]

[node name="Spawn1" type="Marker2D" parent="Spawnpoints"]
position = Vector2(-313, 573)
gizmo_extents = 50.0

[node name="Spawn2" type="Marker2D" parent="Spawnpoints"]
position = Vector2(1412, 583)
gizmo_extents = 50.0

[node name="Spawn3" type="Marker2D" parent="Spawnpoints"]
position = Vector2(556, 11)
gizmo_extents = 50.0

[node name="cărămida ucigașă" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(840, 609)

[node name="Killbrick2" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(80, -49)

[connection signal="pressed" from="UI/Multiplayer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/Multiplayer/Join" to="." method="_on_join_pressed"]
